--- a/SniffCore.MessageBoxes/Themes/Generic.xaml
+++ b/SniffCore.MessageBoxes/Themes/Generic.xaml
@@ -12,7 +12,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:WPFMessageBoxImage}">
-                    <Image Source="{TemplateBinding BitmapSource}" AutomationProperties.AutomationId="{TemplateBinding AutomationProperties.AutomationId}" />
+                    <Image Source="{TemplateBinding BitmapSource}"
+                           AutomationProperties.AutomationId="{TemplateBinding AutomationProperties.AutomationId}" />
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="BitmapSource" Value="{x:Null }">
@@ -33,35 +34,62 @@
                 <ControlTemplate TargetType="{x:Type controls:WPFMessageBoxButtonsPanel}">
                     <DockPanel Background="{TemplateBinding Background}">
                         <UniformGrid Rows="1" DockPanel.Dock="Right" Margin="10,0,0,0">
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_SingleOKButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_SingleOKButton" Visibility="Collapsed" />
 
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_OKButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Yes, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_YesButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.YesToAll, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_YesToAllButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.No, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_NoButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.NoToAll, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_NoToAllButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Abort, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_AbortButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Retry, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_RetryButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Cancel, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_CancelButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Ignore, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_IgnoreButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_OKButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Yes, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_YesButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.YesToAll, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_YesToAllButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.No, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_NoButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.NoToAll, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_NoToAllButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Abort, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_AbortButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Retry, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_RetryButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Cancel, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_CancelButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Ignore, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_IgnoreButton" Visibility="Collapsed" />
 
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.TryAgain, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_TryAgainButton" Visibility="Collapsed" />
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Continue, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_ContinueButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.TryAgain, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_TryAgainButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Continue, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_ContinueButton" Visibility="Collapsed" />
 
-                            <controls:WPFMessageBoxButtonControl Content="{Binding Strings.Help, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_HelpButton" Visibility="Collapsed" />
+                            <controls:WPFMessageBoxButtonControl
+                                Content="{Binding Strings.Help, RelativeSource={RelativeSource TemplatedParent}}"
+                                x:Name="PART_HelpButton" Visibility="Collapsed" />
                         </UniformGrid>
 
                         <controls:WPFMessageBoxDetailsButton x:Name="PART_DetailsExpander"
-                                                                    CollapsedHeaderText="{Binding Strings.OpenDetails, RelativeSource={RelativeSource TemplatedParent}}"
-                                                                    ExpandedHeaderText="{Binding Strings.CloseDetails, RelativeSource={RelativeSource TemplatedParent}}"
-                                                                    Visibility="Collapsed" />
+                                                             CollapsedHeaderText="{Binding Strings.OpenDetails, RelativeSource={RelativeSource TemplatedParent}}"
+                                                             ExpandedHeaderText="{Binding Strings.CloseDetails, RelativeSource={RelativeSource TemplatedParent}}"
+                                                             Visibility="Collapsed" />
 
                         <controls:WPFMessageBoxCheckBox x:Name="PART_DoNotShowAgainCheckBox"
-                                                               Content="{Binding Strings.DoNotShowAgain, RelativeSource={RelativeSource TemplatedParent}}"
-                                                               IsChecked="{Binding IsDoNotShowAgainChecked, RelativeSource={RelativeSource TemplatedParent}}"
-                                                               Visibility="Collapsed" />
+                                                        Content="{Binding Strings.DoNotShowAgain, RelativeSource={RelativeSource TemplatedParent}}"
+                                                        IsChecked="{Binding IsDoNotShowAgainChecked, RelativeSource={RelativeSource TemplatedParent}}"
+                                                        Visibility="Collapsed" />
 
-                        <ContentControl Content="{Binding CustomItem, RelativeSource={RelativeSource TemplatedParent}}" Focusable="False" />
+                        <ContentControl Content="{Binding CustomItem, RelativeSource={RelativeSource TemplatedParent}}"
+                                        Focusable="False" />
 
                         <Grid />
                     </DockPanel>
@@ -70,7 +98,8 @@
                         <Trigger Property="Buttons" Value="OK">
                             <Setter TargetName="PART_SingleOKButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_SingleOKButton" Property="AutomationProperties.AutomationId" Value="2" />
+                            <Setter TargetName="PART_SingleOKButton" Property="AutomationProperties.AutomationId"
+                                    Value="2" />
                         </Trigger>
 
                         <Trigger Property="Buttons" Value="OKCancel">
@@ -78,7 +107,8 @@
                             <Setter TargetName="PART_CancelButton" Property="Visibility" Value="Visible" />
 
                             <Setter TargetName="PART_OKButton" Property="AutomationProperties.AutomationId" Value="1" />
-                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId" Value="2" />
+                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId"
+                                    Value="2" />
                         </Trigger>
 
                         <Trigger Property="Buttons" Value="AbortRetryIgnore">
@@ -86,9 +116,12 @@
                             <Setter TargetName="PART_RetryButton" Property="Visibility" Value="Visible" />
                             <Setter TargetName="PART_IgnoreButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_AbortButton" Property="AutomationProperties.AutomationId" Value="3" />
-                            <Setter TargetName="PART_RetryButton" Property="AutomationProperties.AutomationId" Value="4" />
-                            <Setter TargetName="PART_IgnoreButton" Property="AutomationProperties.AutomationId" Value="5" />
+                            <Setter TargetName="PART_AbortButton" Property="AutomationProperties.AutomationId"
+                                    Value="3" />
+                            <Setter TargetName="PART_RetryButton" Property="AutomationProperties.AutomationId"
+                                    Value="4" />
+                            <Setter TargetName="PART_IgnoreButton" Property="AutomationProperties.AutomationId"
+                                    Value="5" />
                         </Trigger>
 
                         <Trigger Property="Buttons" Value="YesNoCancel">
@@ -98,7 +131,8 @@
 
                             <Setter TargetName="PART_YesButton" Property="AutomationProperties.AutomationId" Value="6" />
                             <Setter TargetName="PART_NoButton" Property="AutomationProperties.AutomationId" Value="7" />
-                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId" Value="2" />
+                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId"
+                                    Value="2" />
                         </Trigger>
 
                         <Trigger Property="Buttons" Value="YesNo">
@@ -113,8 +147,10 @@
                             <Setter TargetName="PART_RetryButton" Property="Visibility" Value="Visible" />
                             <Setter TargetName="PART_CancelButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_RetryButton" Property="AutomationProperties.AutomationId" Value="4" />
-                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId" Value="2" />
+                            <Setter TargetName="PART_RetryButton" Property="AutomationProperties.AutomationId"
+                                    Value="4" />
+                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId"
+                                    Value="2" />
                         </Trigger>
 
                         <Trigger Property="Buttons" Value="CancelTryAgainContinue">
@@ -122,9 +158,12 @@
                             <Setter TargetName="PART_TryAgainButton" Property="Visibility" Value="Visible" />
                             <Setter TargetName="PART_ContinueButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId" Value="2" />
-                            <Setter TargetName="PART_TryAgainButton" Property="AutomationProperties.AutomationId" Value="4" />
-                            <Setter TargetName="PART_ContinueButton" Property="AutomationProperties.AutomationId" Value="8" />
+                            <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId"
+                                    Value="2" />
+                            <Setter TargetName="PART_TryAgainButton" Property="AutomationProperties.AutomationId"
+                                    Value="4" />
+                            <Setter TargetName="PART_ContinueButton" Property="AutomationProperties.AutomationId"
+                                    Value="8" />
                         </Trigger>
 
                         <Trigger Property="ShowHelpButton" Value="True">
@@ -136,13 +175,15 @@
                         <Trigger Property="ShowDoNotShowAgainCheckBox" Value="True">
                             <Setter TargetName="PART_DoNotShowAgainCheckBox" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_DoNotShowAgainCheckBox" Property="AutomationProperties.AutomationId" Value="12" />
+                            <Setter TargetName="PART_DoNotShowAgainCheckBox"
+                                    Property="AutomationProperties.AutomationId" Value="12" />
                         </Trigger>
 
                         <Trigger Property="ShowDetails" Value="True">
                             <Setter TargetName="PART_DetailsExpander" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_DetailsExpander" Property="AutomationProperties.AutomationId" Value="13" />
+                            <Setter TargetName="PART_DetailsExpander" Property="AutomationProperties.AutomationId"
+                                    Value="13" />
                         </Trigger>
 
                         <MultiTrigger>
@@ -152,7 +193,8 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="PART_YesToAllButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_YesToAllButton" Property="AutomationProperties.AutomationId" Value="10" />
+                            <Setter TargetName="PART_YesToAllButton" Property="AutomationProperties.AutomationId"
+                                    Value="10" />
                         </MultiTrigger>
 
                         <MultiTrigger>
@@ -162,7 +204,8 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="PART_YesToAllButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_YesToAllButton" Property="AutomationProperties.AutomationId" Value="10" />
+                            <Setter TargetName="PART_YesToAllButton" Property="AutomationProperties.AutomationId"
+                                    Value="10" />
                         </MultiTrigger>
 
                         <MultiTrigger>
@@ -172,7 +215,8 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="PART_NoToAllButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_NoToAllButton" Property="AutomationProperties.AutomationId" Value="11" />
+                            <Setter TargetName="PART_NoToAllButton" Property="AutomationProperties.AutomationId"
+                                    Value="11" />
                         </MultiTrigger>
 
                         <MultiTrigger>
@@ -182,7 +226,8 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="PART_NoToAllButton" Property="Visibility" Value="Visible" />
 
-                            <Setter TargetName="PART_NoToAllButton" Property="AutomationProperties.AutomationId" Value="11" />
+                            <Setter TargetName="PART_NoToAllButton" Property="AutomationProperties.AutomationId"
+                                    Value="11" />
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
